# ChangeLog for dev-libs/argtable
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/argtable/ChangeLog,v 1.17 2008/03/09 19:35:55 fmccor Exp $

  09 Mar 2008; Ferris McCormick <fmccor@gentoo.org> argtable-2.8.ebuild:
  Add ~sparc for testing --- Bug #212857 --- thanks to Aaron Mavrinac.

  06 Feb 2008; nixnut <nixnut@gentoo.org> argtable-2.8.ebuild:
  stable on ppc wrt bug #208427

  02 Feb 2008; Christoph Mende <angelos@gentoo.org>
  -files/argtable-2.4-fix-makefile.diff, -argtable-2.4.ebuild:
  Remove old

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org> argtable-2.8.ebuild:
  stable x86, bug 208427

  01 Feb 2008; Christoph Mende <angelos@gentoo.org> argtable-2.8.ebuild:
  Stable on amd64, bug #208427

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> argtable-2.7.ebuild:
  ppc. stable

*argtable-2.8 (02 Jan 2008)

  02 Jan 2008; Christoph Mende <angelos@gentoo.org> +argtable-2.8.ebuild:
  Version bump

  31 Aug 2007; Christoph Mende <angelos@gentoo.org> argtable-2.7.ebuild:
  Stable on amd64

*argtable-2.7 (01 Aug 2007)

  01 Aug 2007; Christoph Mende <angelos@gentoo.org> metadata.xml,
  argtable-2.4.ebuild, +argtable-2.7.ebuild:
  Taking over maintainership
  Version bump to 2.7
  argtable-2.4 stable on amd64

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  01 Jan 2006; Luis Medinas <metalgod@gentoo.org> argtable-2.4.ebuild:
  Added ~amd64 keyword.

  03 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> argtable-2.4.ebuild:
  Fix LICENSE (should've been LGPL-2).

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> argtable-2.4.ebuild:
  Stable on ppc.

  06 May 2005; Aaron Walker <ka0ttic@gentoo.org> argtable-2.4.ebuild:
  Stable on x86.

  04 May 2005; David Holm <dholm@gentoo.org> argtable-2.4.ebuild: