@@ -1,0 +1,14 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-notes/Attic/xfce4-notes-1.6.2.ebuild,v 1.1 2008/05/13 23:58:31 angelos Exp $
+
+inherit xfce44
+
+DESCRIPTION="Xfce4 panel sticky notes plugin"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+
+DOCS="AUTHORS ChangeLog NEWS README TODO"
+
+xfce44
+xfce44_gzipped
+xfce44_goodies_panel_plugin
