@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-notes
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-notes/Attic/ChangeLog,v 1.47 2008/03/26 11:51:20 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-notes/Attic/ChangeLog,v 1.48 2008/05/13 23:58:31 angelos Exp $
+
+*xfce4-notes-1.6.2 (13 May 2008)
+
+  13 May 2008; Christoph Mende <angelos@gentoo.org>
+  +xfce4-notes-1.6.2.ebuild:
+  Version bump
 
   26 Mar 2008; Jeroen Roovers <jer@gentoo.org> xfce4-notes-1.6.1.ebuild:
   Stable for HPPA (bug #214130).
